bk_ida/gccida/c2/find_matches
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2001:7: error: expected expression
match::$39674742B8CCC4F36A6A7D6F5B90F581 *v8; // rbp 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2004:7: error: expected expression
match::$39674742B8CCC4F36A6A7D6F5B90F581 *v11; // rsi 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2004:1: error: redefinition of label 'match'
match::$39674742B8CCC4F36A6A7D6F5B90F581 *v11; // rsi 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2001:1: note: previous definition is here
match::$39674742B8CCC4F36A6A7D6F5B90F581 *v8; // rbp 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2010:7: error: expected expression
match::$39674742B8CCC4F36A6A7D6F5B90F581 v18; // eax 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2010:1: error: redefinition of label 'match'
match::$39674742B8CCC4F36A6A7D6F5B90F581 v18; // eax 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2001:1: note: previous definition is here
match::$39674742B8CCC4F36A6A7D6F5B90F581 *v8; // rbp 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2029:32: error: use of undeclared identifier 'recog_data_0'
n_operands = ( unsigned __int8)recog_data_0.n_operands; 
                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2030:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands <= 0 ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2032:24: error: use of undeclared identifier 'recog_data_0'
v5 = ( unsigned __int8)recog_data_0.n_operands; 
                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2033:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( recog_data_0.n_operands <= 3u ) 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2035:6: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v6 = recog_data_0.n_operands & 0xFC; 
     ^~~~~~~~~~~~
     recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2038:1: error: use of undeclared identifier 'v8'
v8 = &matchp->use[( unsigned __int8)recog_data_0.n_operands + 26]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2038:37: error: use of undeclared identifier 'recog_data_0'
v8 = &matchp->use[( unsigned __int8)recog_data_0.n_operands + 26]; 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2043:12: error: expected expression
*( _OWORD *)&v8[v10] = -1LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2043:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v8[v10] = -1LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2043:14: error: use of undeclared identifier 'v8'
*( _OWORD *)&v8[v10] = -1LL; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2044:12: error: expected expression
*( _OWORD *)&v8[v10 - 60] = -1LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2044:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v8[v10 - 60] = -1LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2044:14: error: use of undeclared identifier 'v8'
*( _OWORD *)&v8[v10 - 60] = -1LL; 
             ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/regmove.c:2045:12: error: expected expression
*( _OWORD *)&v8[v10 - 4] = -1LL; 
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_matches/src/obj/regmove.o] Error 1
